--- a/requirements.txt
+++ b/requirements.txt
@@ -53,8 +53,13 @@ pytest-cov>=4.1.0
 pytest-mock>=3.12.0
 faker>=20.0.0
 
-# Utilities
+# CLI and Display
 click>=8.1.7
 rich>=13.7.0
+
+# Utilities
 tqdm>=4.66.0
 tenacity>=8.2.3
+aiohttp
+rich
+psycopg2-binary
